Bug fix - footer was too small for certain laptop screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -1107,7 +1107,7 @@ main {
 footer {
     width: 100vw;
     background-color: rgb(126, 126, 126);
-    height: 20vh;
+    height: 23vh;
     color: white;
 }
 
